--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     },
     "dependencies": {
         "@made-simple/discord.js": "^3.1.0",
+        "@types/cron": "^2.0.1",
         "chalk": "^5.2.0",
+        "cron": "^2.3.0",
         "discord.js": "^14.11.0",
         "dotenv": "^16.0.3"
     },
@@ -31,8 +33,7 @@
         "nodemon": "^2.0.22",
         "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
-        "tslib": "^2.5.0",
-        "typescript": "^5.0.4"
+        "tslib": "^2.5.0"
     },
     "engines": {
         "node": ">14.16"
