--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
         "pm2": "npm run build && pm2 start dist/index.js --name \"good-boy\""
     },
     "dependencies": {
-        "@made-simple/discord.js": "^3.1.0",
-        "@types/cron": "^2.0.1",
+        "@keyv/sqlite": "^3.6.5",
+        "@made-simple/discord.js": "^3.1.2",
         "chalk": "^5.2.0",
         "cron": "^2.3.0",
         "discord.js": "^14.11.0",
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "keyv": "^4.5.2"
     },
     "devDependencies": {
-        "@types/node": "^20.1.1",
+        "@types/cron": "^2.0.1",
+        "@types/node": "^20.1.2",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
         "eslint": "^8.40.0",
